# embedded-controls

./: Cargo.toml  README.md
src/: button.rs  debounced_input.rs  duration.rs  encoder.rs  error.rs  lib.rs  macros.rs
tests/: common.rs  debounced_input.rs  encoder.rs
