[package]
name = "embedded-controls"
authors = ["Stanislav Kusovskyi <kusovsky95@gmail.com>"]
edition = "2021"
description = "Based on switch-hal that allows to handle primitive controls(buttons, encoders and etc.)"
repository = "https://github.com/kusstas/embedded-controls"
documentation = "https://docs.rs/crate/embedded-controls"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal", "embedded-hal-driver", "encoder", "button", "debounce"]
version = "0.1.1"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
switch-hal = "^0.4.0"

[dependencies.num-traits]
version = "^0.2.15"
default-features = false

[dependencies.num-integer]
version = "^0.1.45"
default-features = false
